--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1>Hello world!</h1>
+<h1>>Hello, this is a website from Mauricio Orden designed to show some projects</h1>
 <div><img src="Foto_MO.jpg" alt="Hello World from Space" style="width:100%;max-width:640px"></div>
 
 <script type="text/javascript">
