--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Hello, this is a website from Mauricio Orden designed to show some projects</title>
+<title>Hello, this is a website from Mauricio Orden designed to show Amazon Connect Web Widget for chat, audio and video</title>
 <link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
