--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 <body>
 
 <h1>Hello, this is a website from Mauricio Orden designed to show Amazon Connect Web Widget for chat, audio and video</h1>
-<div><img src="Foto_MO.jpg" alt="Hello World from Space" style="width:100%;max-width:640px"></div>
-
+<!-- <div><img src="Foto_MO.jpg" alt="Hello World from Space" style="width:100%;max-width:640px"></div> -->
+<h2>You can test a contact center built with Amazon Connect clicking on the blue phone widget</h1>
+  
 <script type="text/javascript">
   (function(w, d, x, id){
     s=d.createElement('script');
